--- a/nextflow.config
+++ b/nextflow.config
@@ -2,21 +2,51 @@ profiles {
 
   singularity {
     singularity.enabled = true
-    process.container = 'oncornalab/dmas:v0.3'
-
-  }
-
-  local {
-    docker.enabled = true
-    process.container = 'oncornalab/dmas:v0.3'
-
-  }
-
-  dev {
-    docker.enabled = true
     process.container = 'oncornalab/dmas:latest'
 
   }
 
+  local {
+    docker.enabled = false
+    process.container = 'oncornalab/dmas:latest'
+    params.input = "$baseDir/input.txt"
+
+  }
+
+  standard {
+    docker.enabled = true
+    process.container = 'arneblom/dmas'
+    
+    params.input = "$projectDir/Test/input.txt"
+    params.outdir = "$projectDir/Output"
+    params.help = false
+
+    parmas.cpus = 3
+
+    params.coords = true
+    parmas.index_bowtie = "$projectDir/Assets/GRCh38/Index_bowtie"
+    params.index_bowtie_name = "GRCh38_noalt_as"
+
+    params.primer_settings = "$projectDir/Assets/GRCh38/Primer3_settings.txt"
+    params.snp_url = 'http://hgdownload.soe.ucsc.edu/gbdb/hg38/snp/dbSnp155Common.bb'
+    params.primer3_diff = 1
+    params.primer3_nr = 20
+    params.diff_tm = 2
+    params.min_tm = 58
+    params.max_tm = 60
+    params.opt_tm = 59
+    params.min_gc = 30
+    params.opt_gc = 50
+    params.max_gc = 80
+    params.amp_min = 50
+    params.amp_max = 150
+    params.mis_lib = "$projectDir/Assets/humrep_and_simple.txt"
+    params.max_mis_lib = 12
+
+    params.snp_filter = 'loose'
+    params.spec_filter = 'loose'
+    params.sec_str_filter = 'loose'
+    params.validation_filter = 'loose'
+  }
 }
 
