--- a/nextflow.config
+++ b/nextflow.config
@@ -17,13 +17,14 @@ profiles {
     docker.enabled = true
     process.container = 'arneblom/dmas'
     
-    params.input = "$projectDir/Test/input.txt"
+    params.input = "$projectDir/input.txt"
     params.outdir = "$projectDir/Output"
     params.help = false
 
     parmas.cpus = 3
 
     params.coords = true
+    params.species = "human"
     parmas.index_bowtie = "$projectDir/Assets/GRCh38/Index_bowtie"
     params.index_bowtie_name = "GRCh38_noalt_as"
 
