--- a/nextflow.config
+++ b/nextflow.config
@@ -32,6 +32,7 @@ profiles {
     params.snp_url = 'http://hgdownload.soe.ucsc.edu/gbdb/hg38/snp/dbSnp155Common.bb'
     params.primer3_diff = 1
     params.primer3_nr = 20
+    params.min_left_prime = 1
     params.diff_tm = 2
     params.min_tm = 58
     params.max_tm = 60
@@ -41,8 +42,17 @@ profiles {
     params.max_gc = 80
     params.amp_min = 50
     params.amp_max = 150
-    params.mis_lib = "$projectDir/Assets/humrep_and_simple.txt"
+    params.mis_lib = "$projectDir/Assets/GRCh38/humrep_and_simple.txt"
     params.max_mis_lib = 12
+
+    params.dnac = 250
+    params.na = 50
+    params.k = 0
+    params.tris =75 
+    parmas.mg = 3 
+    parmas.dNTPs = 1.2
+    parmas.position = "all"
+    params.single_MM_Tm = 55
 
     params.snp_filter = 'loose'
     params.spec_filter = 'loose'
