--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -63,4 +63,4 @@ RUN rm -rf /var/lib/a
 # scripts
 WORKDIR /
 ADD scripts /usr/bin
-RUN chmod +x /usr/bin/01_generate_template.py /usr/bin/02_check_coord.py /usr/bin/03_get_sec_str_temp_ViennaRNA.py /usr/bin/04_get_SNPs.py /usr/bin/05_primer_generation.py /usr/bin/06_Primer3_common_primer.py /usr/bin/07_primer_validation.py /usr/bin/08_get_sec_str_amp_ViennaRNA.py /usr/bin/09_primer_specificity.py /usr/bin/10_filter.py
+RUN chmod +x /usr/bin/00_Create_input.py /usr/bin/01_generate_template.py /usr/bin/02_check_coord.py /usr/bin/03_get_sec_str_temp_ViennaRNA.py /usr/bin/04_get_SNPs.py /usr/bin/05_primer_generation.py /usr/bin/06_Primer3_common_primer.py /usr/bin/07_primer_validation.py /usr/bin/08_get_sec_str_amp_ViennaRNA.py /usr/bin/09_primer_specificity.py /usr/bin/10_filter.py
