--- a/nextflow.config
+++ b/nextflow.config
@@ -3,13 +3,12 @@ profiles {
   singularity {
     singularity.enabled = true
     process.container = 'oncornalab/dmas:latest'
-
   }
 
   local {
     docker.enabled = false
     process.container = 'oncornalab/dmas:latest'
-    params.input = "$baseDir/input.txt"
+    params.input = "$baseDir/Input_file.txt"
 
   }
 
@@ -17,7 +16,7 @@ profiles {
     docker.enabled = true
     process.container = 'arneblom/dmas'
     
-    params.input = "$projectDir/input.txt"
+    params.input = "$projectDir/Input_file.txt"
     params.outdir = "$projectDir/Output"
     params.help = false
 
@@ -58,6 +57,10 @@ profiles {
     params.spec_filter = 'loose'
     params.sec_str_filter = 'loose'
     params.validation_filter = 'loose'
+  }
+
+  nf_runner {
+    docker.enabled = false
   }
 }
 
